--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "angular-filter": "^0.5.9"
+    "angular-filter": "^0.5.9",
+    "Swiper": "swiper#^3.3.1"
   }
 }
