--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "angular-filter": "^0.5.9",
-    "Swiper": "swiper#^3.3.1"
+    "Swiper": "swiper#^3.3.1",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
