--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular-filter": "^0.5.9",
     "Swiper": "swiper#^3.3.1",
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
+    "bootstrap": "^3.3.7"
   }
 }
