--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,14 @@
     "angular-filter": "^0.5.9",
     "Swiper": "swiper#^3.3.1",
     "ngCordova": "^0.1.27-alpha",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "ionic-material": "^0.4.2",
+    "robotodraft": "^1.1.0"
+  },
+  "resolutions": {
+    "angular-animate": "1.5.3",
+    "angular": "1.5.3",
+    "angular-sanitize": "1.5.3",
+    "ionic": "1.3.1"
   }
 }
