--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,1 +1,5 @@
 auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+file.reference.NEWS-Ionic-www=www
+files.encoding=UTF-8
+site.root.folder=${file.reference.NEWS-Ionic-www}
+source.folder=
